--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.19.2",
     "joi": "^17.12.2",
     "mongoose": "^8.19.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^7.0.9",
+    "razorpay": "^2.9.6"
   },
   "devDependencies": {
     "jest": "^29.7.0",
